Fix overflowing action sheet labels (#863)
Resolves #271

--- a/src/index.css
+++ b/src/index.css
@@ -105,7 +105,20 @@ ion-action-sheet
 }
 
 ion-action-sheet ion-icon {
+  flex-shrink: 0;
   margin-inline-end: 16px !important;
+}
+
+.action-sheet-button:not(.action-sheet-cancel) {
+  padding-inline-end: 0 !important;
+}
+.action-sheet-button-inner {
+  mask-image: linear-gradient(
+    90deg,
+    rgba(0, 0, 0, 1) 0%,
+    rgba(0, 0, 0, 1) calc(100% - 16px),
+    transparent 100%
+  );
 }
 
 /* photoswipe */
